# PerfRabbitAmqpLibsTest

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml  fill_queue.sh  run.sh
include/: RabbitmqcExecutor.hpp  SimpleAmqpExecutor.hpp  args.hpp  profile.hpp
src/: RabbitmqcExecutor.cpp  SimpleAmqpExecutor.cpp  main.cpp
